reverted header z-index to fix issue with clicking buttons in the upper part of the app

--- a/app/styles/components/_duraark-header.scss
+++ b/app/styles/components/_duraark-header.scss
@@ -1,5 +1,5 @@
 .duraark-header {
-  z-index: 10;
+  // z-index: 10;
   position: fixed;
   top: 0;
   left: 0;
